--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -133,6 +133,7 @@
              <div class="row justify-content-center text-center">
                <div class="col-lg-6 section-heading" data-aos="fade-up">
                  <h3 class="text-center">Courses(2022-2)</h3>
+                 <p>2022학년도 2학기에 수강한 과목들입니다.</p>
                </div>
              </div>
            </div>
