--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
                     <div class="sub-text">
                       <p class="mb-5">Welcome to my page!</p>
-                      <a href="#about" class="btn btn-outline-light mb-5">About Me</a>
+                      <a href="#about" class="btn btn-light">About Me</a>
                     </div>
                   </div>
                 </div>
@@ -132,7 +132,7 @@
             </div>
           </div>
 
-          <div class="untree_co--site-hero overlay"  style="background-image: url('My Page/Portfolio/images/slider_1.jpg')">
+          <div class="untree_co--site-hero overlay"  style="background-image: url('My Page/Portfolio/images/배배경.jpg')">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-8">
@@ -140,7 +140,7 @@
                     <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
                     <div class="sub-text">
                       <p class="mb-5">Welcome to my page!</p>
-                      <a href="#about" class="btn btn-outline-light mb-5">About Me</a>
+                      <a href="#about" class="btn btn-light">About Me</a>
                     </div>
                   </div>
                 </div>
@@ -156,7 +156,7 @@
                     <h1 class="hero-heading mb-5">Hello, <br> I'm Yujin</h1>
                     <div class="sub-text">
                       <p class="mb-5">Welcome to my page!</p>
-                      <a href="#about" class="btn btn-outline-light mb-5">About Me</a>
+                      <a href="#about" class="btn btn-light">About Me</a>
                     </div>
                   </div>
                 </div>
@@ -229,12 +229,12 @@
         </div>
       </div>
 
-    <div class="untree_co--site-section float-left pb-0 featured-rooms">
-      <div class="container" data-aos="fade-up">
+    <div class="untree_co--site-section">
+      <div class="container" data-aos="fade-up" style="background-image : url('My Page/Portfolio/images/다운로드.jpg');padding:70px;">
         <div class="row">
           <div class="col-lg-2">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="background-color:#F5F4ED; height:160px">
-              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-ele" role="tab" style="height:40px">초등학교</a>
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="background-color:#FBF9FD; height:160px">
+              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-ele" role="tab" style="height:40px"><p>초등학교</p></a>
               <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-mid" role="tab" style="height:40px">중학교</a>
               <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-high" role="tab" style="height:40px">고등학교</a>
               <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-univ" role="tab" style="height:40px">대학교</a>
@@ -245,56 +245,41 @@
               <div class="tab-pane active show" id="v-pills-ele" role="tabpanel" aria-labelledby="v-pills-home-tab">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h4>광교초등학교</h4>
+                    <h4 class="font-weight-bold ml-3">광교초등학교</h4>
                     <ul>
-                      <li>2011.03.02 전학</li>
-                      <li>2013.02 졸업</li>
+                      <li class="font-weight-bold">2011.03.02 전학</li>
+                      <li class="font-weight-bold">2013.02 졸업</li>
                     </ul>
                   </div>
                   <div class="col-lg-9">
-                    <div class="container-fluid pt-5">
-                      <div class="suite-wrap overlap-image-1">
-                        <div class="suite">
-                          <div class="image-stack">
-                            <div class="image-stack-item image-stack-item-top">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/초등학교.jpg" alt="Image" class="img-fluid pic1">
-                            </div>
-                            <div class="image-stack-item image-stack-item-bottom">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/초.jpg" alt="Image" class="img-fluid pic2">
-                            </div>
-                          </div>
-                        </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/초등학교.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                      </div>
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/초.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+
               <div class="tab-pane fade" id="v-pills-mid" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h4>광교중학교</h4>
+                    <h4 class="font-weight-bold ml-3">광교중학교</h4>
                       <ul>
-                        <li>2013.03.02 입학</li>
-                        <li>2016.02 졸업</li>
+                        <li class="font-weight-bold">2013.03.02 입학</li>
+                        <li class="font-weight-bold">2016.02 졸업</li>
                       </ul>
                   </div>
                   <div class="col-lg-9">
-                    <div class="container-fluid pt-5">
-                      <div class="suite-wrap overlap-image-1">
-                        <div class="suite">
-                          <div class="image-stack">
-                            <div class="image-stack-item image-stack-item-top">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/중학교.jpg" alt="Image" class="img-fluid pic1">
-                            </div>
-                            <div class="image-stack-item image-stack-item-bottom">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/중.jpg" alt="Image" class="img-fluid pic2">
-                            </div>
-                          </div>
-                        </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/중학교.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                      </div>
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/중.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
                       </div>
                     </div>
                   </div>
@@ -303,27 +288,19 @@
               <div class="tab-pane fade" id="v-pills-high" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h4>광교고등학교</h4>
+                    <h4 class="font-weight-bold ml-3">광교고등학교</h4>
                     <ul>
-                      <li>2016.03.02 전학</li>
-                      <li>2019.01 졸업</li>
+                      <li class="font-weight-bold">2016.03.02 전학</li>
+                      <li class="font-weight-bold">2019.01 졸업</li>
                     </ul>
                   </div>
                   <div class="col-lg-9">
-                    <div class="container-fluid pt-5">
-                      <div class="suite-wrap overlap-image-1">
-                        <div class="suite">
-                          <div class="image-stack">
-                            <div class="image-stack-item image-stack-item-top">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/고등학교.jpg" alt="Image" class="img-fluid pic1">
-                            </div>
-                            <div class="image-stack-item image-stack-item-bottom">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/고.jpg" alt="Image" class="img-fluid pic2">
-                            </div>
-                          </div>
-                        </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/고등학교.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                      </div>
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/고.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
                       </div>
                     </div>
                   </div>
@@ -332,27 +309,19 @@
               <div class="tab-pane fade" id="v-pills-univ" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                 <div class="row">
                   <div class="col-lg-3">
-                    <h4>동덕여자대학교</h4>
+                    <h4 class="font-weight-bold ml-2">동덕여자대학교</h4>
                     <ul>
-                      <li>2020.03.02 입학</li>
-                      <li>3학년 재학중</li>
+                      <li class="font-weight-bold">2020.03.02 입학</li>
+                      <li class="font-weight-bold">3학년 재학중</li>
                     </ul>
                   </div>
                   <div class="col-lg-9">
-                    <div class="container-fluid pt-5">
-                      <div class="suite-wrap overlap-image-1">
-                        <div class="suite">
-                          <div class="image-stack">
-                            <div class="image-stack-item image-stack-item-top">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/학생증.jpg" alt="Image" class="img-fluid pic1">
-                            </div>
-                            <div class="image-stack-item image-stack-item-bottom">
-                              <div class="overlay"></div>
-                              <img src="My%20Page/Portfolio/images/대.jpg" alt="Image" class="img-fluid pic2">
-                            </div>
-                          </div>
-                        </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/학생증.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                      </div>
+                      <div class="col-lg-6">
+                        <img src="My%20Page/Portfolio/images/대.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
                       </div>
                     </div>
                   </div>
@@ -375,7 +344,7 @@
           </div>
             <div class="row custom-row-02192 align-items-stretch">
               <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="media-29191 text-center h-100">
+                <div class="media-29191 text-center h-100" style="border-color: black; border-style:solid">
                   <div class="media-29191-icon">
                     <img src="My%20Page/Portfolio/images/svg/folder.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
@@ -397,7 +366,7 @@
               </div>
 
               <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="media-29191 text-center h-100">
+                <div class="media-29191 text-center h-100" style="border-color: black; border-style:solid">
                   <div class="media-29191-icon">
                     <img src="My%20Page/Portfolio/images/svg/coding.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
@@ -418,7 +387,7 @@
               </div>
 
               <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="media-29191 text-center h-100">
+                <div class="media-29191 text-center h-100" style="border-color: black; border-style:solid">
                   <div class="media-29191-icon">
                     <img src="My%20Page/Portfolio/images/svg/cooperation.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
@@ -439,18 +408,17 @@
               </div>
 
               <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="media-29191 text-center h-100">
+                <div class="media-29191 text-center h-100" style="border-color: black; border-style:solid">
                   <div class="media-29191-icon">
                     <img src="My%20Page/Portfolio/images/svg/montage.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
-                  <h3>Viedo Editing<br>(初級)</h3>
+                  <h3>Video Editing<br>(初級)</h3>
                   <p>
                     <a class="readmore reverse mt-3" data-toggle="collapse" href="#collapseExample3">Details</a>
                   </p>
                   <div class="collapse" id="collapseExample3">
                     <div class="card card-body">
                       <ul class="list-unstyled" style="color:black">
-                        <li>Photoshop : 40%</li>
                         <li>Premiere Pro : 20%</li>
                         <li>After Effect : 20%</li>
                       </ul>
@@ -460,11 +428,11 @@
               </div>
 
               <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="media-29191 text-center h-100">
+                <div class="media-29191 text-center h-100" style="border-color: black; border-style:solid">
                   <div class="media-29191-icon">
-                    <img src="My%20Page/Portfolio/images/svg/montage.png" alt="Image" class="img-fluid" style="width:80px">
+                    <img src="My%20Page/Portfolio/images/svg/image-editing.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
-                  <h3>Viedo Editing<br>(初級)</h3>
+                  <h3>Image Editing<br>(初級)</h3>
                   <p>
                     <a class="readmore reverse mt-3" data-toggle="collapse" href="#collapseExample4">Details</a>
                   </p>
@@ -472,7 +440,7 @@
                     <div class="card card-body">
                       <ul class="list-unstyled" style="color:black">
                         <li>Photoshop : 40%</li>
-                        <li>Premiere Pro : 20%</li>
+                        <li>Lightroom : 20%</li>
                       </ul>
                     </div>
                   </div>
@@ -480,7 +448,7 @@
               </div>
 
               <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="media-29191 text-center h-100">
+                <div class="media-29191 text-center h-100" style="border-color: black; border-style:solid">
                   <div class="media-29191-icon">
                     <img src="My%20Page/Portfolio/images/svg/volunteer.png" alt="Image" class="img-fluid" style="width:80px">
                   </div>
